Implement 'DELETE author'